--- a/catalog.html
+++ b/catalog.html
@@ -44,106 +44,95 @@
       </div>
         <!--Меню выбора-->
       <div class="sidebar">
-        <div class="sidebar-item">
-          <h2>Производители:</h2>
-          <ul class="sidebar-item0"><!--что-то надо придумать-->
-          <li>
-              <input type="checkbox"  id="sidebar-item1"checked>
-              <label for="sidebar-item1">Baxter of California</label>
-            </li>
-          <li>
-              <input type="checkbox"  id="sidebar-item2">
-              <label for="sidebar-item1">Mr Natty</label>
-            </li>
-          <li>
-              <input type="checkbox"  id="sidebar-item3"checked>
-              <label for="sidebar-item1">Suavecito</label>
-            </li>
-          <li>
-              <input type="checkbox"  id="sidebar-item4">
-              <label for="sidebar-item1">Malin+Goetz</label>
-            </li>
-          <li>
-              <input type="checkbox"  id="sidebar-item5">
-              <label for="sidebar-item1">Murray's</label>
-            </li>
-          <li>
-              <input type="checkbox"  id="sidebar-item6"checked>
-              <label for="sidebar-item1">American Crew</label>
-            </li>
-          </ul>
-        </div>
-        <div class="sidebar-group">
-          <h2>Группы товаров:</h2>
-          <ul class="sidebar-group0"><!--что-то надо придумать-->
-          <li>
-              <input type="checkbox"  id="sidebar-group1">
-              <label for="sidebar-item1">Бритвенные принадлежности</label>
-            </li>
-          <li>
-              <input type="checkbox"  id="sidebar-group2"checked>
-              <label for="sidebar-item1">Средства для ухода</label>
-            </li>
-          <li>
-              <input type="checkbox"  id="sidebar-group3">
-              <label for="sidebar-item1">Аксессуары</label>
-            </li>
-          </ul>
-        </div>
-        <a class="btn" href="#">Показать</a>
+        <form action="#" mathod="post">
+            <div class="sidebar-first">
+                <h2>Производители:</h2>
+                <input type="checkbox" name="choice" id="choice-field" checked>
+                <label for="choice-field">Baxter of California</label>
+                  <br>
+                <input type="checkbox" name="choice" id="choice-field">
+                <label for="choice-field">Mr Natty</label>
+                  <br>
+                <input type="checkbox" name="choice" id="choice-field" checked>
+                <label for="choice-field">Suavecito</label>
+                  <br>
+                <input type="checkbox" name="choice" id="choice-field">
+                <label for="choice-field">Malin+Goetz</label>
+                  <br>
+                <input type="checkbox" name="choice" id="choice-field">
+                <label for="choice-field">Murray's</label>
+                  <br>
+                <input type="checkbox" name="choice" id="choice-field" checked>
+                <label for="choice-field">American Crew</label>
+            </div>
+            <div class="sidebar-second">
+                <h2>Группы товаров:</h2>
+                <input type="checkbox" name="choice" id="choice-field">
+                <label for="choice-field">Бритвенные принадлежности</label>
+                  <br>
+                <input type="checkbox" name="choice" id="choice-field" checked>
+                <label for="choice-field">Средства для ухода</label>
+                  <br>
+                <input type="checkbox" name="choice" id="choice-field">
+                <label for="choice-field">Аксессуары</label>
+            </div>
+            <div class="buttons">
+                <input type="submit" value="Показать">
+            </div>
+        </form>
       </div>
         <!--Список товаров-->
-        <div class="catalog">
-          <article class="catalog-item">
+      <div class="catalog">
+        <article class="catalog-item">
             <a href="#"><img src="#">
             <p>Набор для путешествий<br>
-            <span class="catalog-item-text">Baxter of California</span>
+            <span class="catalog-item-text">Baxter of California</span></p>
             </a>
             <div class="catalog-item-box">2900 руб.</div>
             <a class="btn" href="#">Купить</a>
           </article>
-          <article class="catalog-item">
+        <article class="catalog-item">
             <a href="#"><img src="#">
             <p>Увлажняющий кондиционер<br>
-            <span class="catalog-item-text">Baxter of California</span>
+            <span class="catalog-item-text">Baxter of California</span></p>
             </a>
             <div class="catalog-item-box">750 руб.</div>
             <a class="btn" href="#">Купить</a>
           </article>
-          <article class="catalog-item">
+        <article class="catalog-item">
             <a href="#"><img src="#">
             <p>Гель для волос<br>
-            <span class="catalog-item-text">Suavecito</span>
+            <span class="catalog-item-text">Suavecito</span></p>
             </a>
             <div class="catalog-item-box">290 руб.</div>
             <a class="btn" href="#">Купить</a>
           </article>
-          <article class="catalog-item">
+        <article class="catalog-item">
             <a href="#"><img src="#">
             <p>Глина для укладки волос<br>
-            <span class="catalog-item-text">American Crew</span>
+            <span class="catalog-item-text">American Crew</span></p>
             </a>
             <div class="catalog-item-box">500 руб.</div>
             <a class="btn" href="#">Купить</a>
           </article>
-          <article class="catalog-item">
+        <article class="catalog-item">
             <a href="#"><img src="#">
             <p>Гель для волос<br>
-            <span class="catalog-item-text">American Crew</span>
+            <span class="catalog-item-text">American Crew</span></p>
             </a>
             <div class="catalog-item-box">300 руб.</div>
             <a class="btn" href="#">Купить</a>
           </article>
-          <article class="catalog-item">
+        <article class="catalog-item">
             <a href="#"><img src="#">
             <p>Набор для бритья<br>
-            <span class="catalog-item-text">Baxter of California</span>
+            <span class="catalog-item-text">Baxter of California</span></p>
             </a>
             <div class="catalog-item-box">3900 руб.</div>
             <a class="btn" href="#">Купить</a>
           </article>
       <!--кнопки страницы-->
-          <div class="page">
+        <div class="page">
             <a class="page-btn" href="#">1</a>
             <a class="page-btn" href="#">2</a>
             <a class="page-btn" href="#">3</a>
