--- a/catalog.html
+++ b/catalog.html
@@ -39,7 +39,7 @@
           <ul class="breadcrumbs">
             <li><a href="index.html">Главная</a></li>
             <li><a href="#">Магазин</a></li>
-            <li><a href="#">Средства для ухода</a></li>
+            <li>Средства для ухода</li>
           </ul>
       </div>
         <!--Меню выбора-->
@@ -84,7 +84,7 @@
         <!--Список товаров-->
       <div class="catalog">
         <article class="catalog-item">
-            <a href="#"><img src="#">
+            <a href="catalog-item.html"><img src="#">
             <p>Набор для путешествий<br>
             <span class="catalog-item-text">Baxter of California</span></p>
             </a>
