--- a/catalog-item.html
+++ b/catalog-item.html
@@ -6,66 +6,66 @@
   </head>
   <body>
     <header class="main-header">
-         <div class="container">
-           <a href="index.html" title="Главная"><img src="#" alt="logo"></a>
-           <nav class="main-navigation">
-             <ul>
-               <li>
-                 <a href="#">Информация</a>
-               </li>
-               <li>
-                 <a href="#">Новости</a>
-               </li>
-               <li>
-                 <a href="#">Прайс-лист</a>
-               </li>
-               <li>
-                 <a href="#">Магазин</a>
-               </li>
-               <li>
-                 <a href="#">Контакты</a>
-               </li>
-             </ul>
-           </nav>
-           <div class="user-block">
-             <a class="login" href="#">Вход</a>
-           </div>
-         </div>
-       </header>
-    <main class="conteiner">
-      <!--Заголовок и навигация-->
-      <div class="content-title">
-          <h1>Набор для путешествий "Baxter of California"</h1>
-          <ul class="breadcrumbs">
-            <li><a href="index.html">Главная</a></li>
-            <li><a href="#">Магазин</a></li>
-            <li><a href="#">Средства для ухода</a></li>
-            <li>Набор для путешествий "Baxter of California"</li>
+      <div class="container">
+        <a href="index.html" title="Главная"><img src="#" alt="logo"></a>
+        <nav class="main-navigation">
+          <ul>
+            <li>
+              <a href="#">Информация</a>
+            </li>
+            <li>
+              <a href="#">Новости</a>
+            </li>
+            <li>
+              <a href="#">Прайс-лист</a>
+            </li>
+            <li>
+              <a href="#">Магазин</a>
+            </li>
+            <li>
+              <a href="#">Контакты</a>
+            </li>
           </ul>
-      </div>
-      <section class="gallery-item">
-        <figure class="gallery-item-big">
-          <img src="#" alt="">
-        </figure>
-        <ul class="gallery-item-small">
-          <li><a href="#"><img src="#"></a></li>
-          <li><a href="#"><img src="#"></a></li>
-          <li><a href="#"><img src="#"></a></li>
-        </ul>
-      </section>
-      <section class="description">
-        <p>Есть в наличии <span class="description-name">Артикул:dexter-ae</span></p>
-        <div class="description-text">
-          <p>Travel kit - необходимый аксессуар во время любого путешествия.
-          В аккуратной кожанной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха:
-          средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+        </nav>
+        <div class="user-block">
+          <a class="login" href="#">Вход</a>
         </div>
-      </section>
-      <section class="buy">
-        <div class="catalog-item-box">2900 руб.</div>
-        <a class="btn" href="#">Купить</a>
-      </section>
-      <section class="options">
+      </div>
+    </header>
+    <main class="conteiner">
+    <!--Заголовок и навигация-->
+    <div class="content-title">
+      <h1>Набор для путешествий "Baxter of California"</h1>
+      <ul class="breadcrumbs">
+        <li><a href="index.html">Главная</a></li>
+        <li><a href="#">Магазин</a></li>
+        <li><a href="#">Средства для ухода</a></li>
+        <li>Набор для путешествий "Baxter of California"</li>
+      </ul>
+    </div>
+    <section class="gallery-item">
+      <figure class="gallery-item-big">
+        <img src="#" alt="">
+      </figure>
+      <ul class="gallery-item-small">
+        <li><a href="#"><img src="#" alt="фото 1"></a></li>
+        <li><a href="#"><img src="#" alt="фото 2"></a></li>
+        <li><a href="#"><img src="#" alt="фото 3"></a></li>
+      </ul>
+    </section>
+    <section class="description">
+      <p>Есть в наличии <span class="description-name">Артикул:dexter-ae</span></p>
+      <div class="description-text">
+        <p>Travel kit - необходимый аксессуар во время любого путешествия.
+          В аккуратной кожанной сумке находится все, что нужно для бритья и ухода за кожей во время рабочей поездки или отдыха:
+        средство для умывания, увлажняющий крем, крем для бритья, крем после бритья, шампунь. Набор также может стать отличным подарком.</p>
+      </div>
+    </section>
+    <section class="buy">
+      <div class="catalog-item-box">2900 руб.</div>
+      <a class="btn" href="#">Купить</a>
+    </section>
+    <section class="options">
       <h2>В набор входят:</h2>
       <ul class="options-list">
         <li>Средство для умывания (50мл)</li>
@@ -74,31 +74,29 @@
         <li>Крем после бритья, шампунь (50мл)</li>
         <li>Удобная кожаная косметичка</li>
       </ul>
-
-        
-      </section>
-    </main>    
-
-       <!--подвал-->
-      <footer class="main-footer">
-            <div class="container">
-              <section class="footer-contacts">
-                Барбершоп «Бородинский»<br>
-                Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
-                <a href="#">Как нас найти?</a><br>
-                Телефон: +7 (812) 666-02-66
-              </section>
-              <section class="footer-social">
-                <p>Давайте дружить!</p>
-                <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
-                <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
-                <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
-              </section>
-              <section class="footer-copyright">
-                <p>Разработано:</p>
-                <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
-              </section>
-            </div>
-          </footer>
+      
+    </section>
+    </main>
+    <!--подвал-->
+    <footer class="main-footer">
+      <div class="container">
+        <section class="footer-contacts">
+          Барбершоп «Бородинский»<br>
+          Адрес: г. Санкт-Петербург, Б. Конюшенная, д. 19/8<br>
+          <a href="#">Как нас найти?</a><br>
+          Телефон: +7 (812) 666-02-66
+        </section>
+        <section class="footer-social">
+          <p>Давайте дружить!</p>
+          <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+          <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+          <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+        </section>
+        <section class="footer-copyright">
+          <p>Разработано:</p>
+          <a class="btn" href="https://htmlacademy.ru">HTML Academy</a>
+        </section>
+      </div>
+    </footer>
   </body>
 </html>
